--- a/gourmet_search/restaurant/templates/restaurant/index.html
+++ b/gourmet_search/restaurant/templates/restaurant/index.html
@@ -44,7 +44,14 @@
                         <input type="hidden" id="longitude" name="longitude">
                         <!-- 検索半径を指定 -->
                         <label for="radius">検索半径 (km):</label>
-                        <input type="number" id="radius" name="radius" min="0.3" max="10" step="0.1" required>
+                        <select name="radius" id="radius">
+                            <option value="1">300m</option>
+                            <option value="2">500m</option>
+                            <option value="3" selected>1000m</option>
+                            <option value="4">2000m</option>
+                            <option value="5">3000m</option>
+                        </select>
+                        {% csrf_token %}
                         <button type="submit">検索</button>
                     </form>
                 </div>
